# monolathic-user-service-

./: .env  compose.yml
service/: README.md  pyproject.toml
service/service/: authentication.py  crud.py  db.py  main.py  model.py
